syntax = "proto3";

option java_package = "org.mybad.skycoreproto";
option java_outer_classname = "SkyCoreProto";

package skycore;

message EntityMapping {
  string name = 1;
  string model = 2;
  string animation = 3;
  string texture = 4;
  string emissive = 5;
  float emissive_strength = 6;
  string bloom = 7;
  string blend_texture = 8;
  string blend_mode = 9;
  repeated float blend_color = 10;
  bool enable_cull = 11;
  float scale = 12;
  float primary_fade_seconds = 13;
  bool render_hurt_tint = 14;
  repeated float hurt_tint = 15;
  bool render_shadow = 16;
  float render_box_width = 17;
  float render_box_height = 18;
  float render_box_depth = 19;
}

message MappingFile {
  string file_name = 1;
  repeated EntityMapping mappings = 2;
}

message ConfigIndexEntry {
  string file_name = 1;
  bytes hash = 2;
  uint64 size = 3;
  int64 modified_at = 4;
}

message ConfigIndex {
  bytes full_hash = 1;
  repeated ConfigIndexEntry entries = 2;
}

message ConfigFileRemoved {
  string file_name = 1;
}

message RenderSettings {
  float bloom_strength = 1;
  uint32 bloom_radius = 2;
  uint32 bloom_downsample = 3;
  float bloom_threshold = 4;
  uint32 bloom_passes = 5;
}

message ForceAnimation {
  reserved 1;
  string clip_name = 2;
  string entity_uuid = 5;
}

message ClearForceAnimation {
  string mapping_name = 1;
  enum Scope {
    SINGLE = 0;
    ALL = 1;
  }
  Scope scope = 2;
}

message SetModelAttributes {
  optional string mapping_name = 1;
  optional float scale = 2;
  optional float emissive_strength = 3;
  optional float bloom_strength = 4;
  optional float bloom_threshold = 5;
  optional string texture = 6;
  optional string emissive = 7;
  optional string bloom = 8;
  optional string blend_texture = 9;
  optional bool enable_cull = 10;
  optional bool render_shadow = 11;
  optional float primary_fade_seconds = 12;
  optional string entity_uuid = 13;
}

message SpawnParticle {
  string effect = 1;
  double x = 2;
  double y = 3;
  double z = 4;
  string locator = 5;
  string mapping_name = 6;
  int32 count = 7;
}

message PreloadHint {
  string group = 1;
  repeated string mapping_names = 2;
  repeated string textures = 3;
  repeated string particles = 4;
  repeated string sounds = 5;
}

message ClearParticles {
  string effect = 1;
  enum Scope {
    PLAYER = 0;
    WORLD = 1;
    ALL = 2;
  }
  Scope scope = 2;
}

message DebugRenderFlags {
  optional bool show_entity_boxes = 1;
  optional bool show_skull_anchors = 2;
}
